# ext_provider_fastapi

./: pyproject.toml
ext_provider/: app.py  base.py  models.py
